update citation file

--- a/CITATIONS.bib
+++ b/CITATIONS.bib
@@ -1,10 +1,26 @@
-@INPROCEEDINGS{10253365,
-  author={Häußermann, Tim and Lehmann, Joel and Rache, Alessa and Reichwald, Julian},
-  booktitle={2023 3rd International Conference on Electrical, Computer, Communications and Mechatronics Engineering (ICECCME)}, 
-  title={Conceptual Architecture for the Provision and Aggregation of Universal Digital Twins within Containerization Environments}, 
-  year={2023},
-  volume={},
-  number={},
-  pages={1-6},
-  keywords={Mechatronics;Codes;Computer architecture;Digital twins;Behavioral sciences;Intelligent structures;Digital Twin;Cyber-physical System;Containerization;Container Twin},
-  doi={10.1109/ICECCME57830.2023.10253365}}
+@INPROCEEDINGS{Hae2023,
+  title = {Conceptual Architecture for the Provision and Aggregation of Universal Digital Twins within Containerization Environments},
+  url = {http://dx.doi.org/10.1109/ICECCME57830.2023.10253365},
+  DOI = {10.1109/iceccme57830.2023.10253365},
+  booktitle = {2023 3rd International Conference on Electrical,  Computer,  Communications and Mechatronics Engineering (ICECCME)},
+  publisher = {IEEE},
+  author = {Häußermann,  Tim and Lehmann,  Joel and Rache,  Alessa and Reichwald,  Julian},
+  year = {2023},
+  month = jul,
+  pages = {1–6}
+  },
+
+@article{Hae2025,
+  title = {UniTwin: Pushing Universal Digital Twins Into the Clouds Through Reconfigurable Container Environments},
+  volume = {29},
+  ISSN = {1941-0131},
+  url = {http://dx.doi.org/10.1109/MIC.2024.3489876},
+  DOI = {10.1109/mic.2024.3489876},
+  number = {1},
+  journal = {IEEE Internet Computing},
+  publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
+  author = {Häußermann,  Tim M. and Lehmann,  Joel and Rache,  Alessa and Kolb,  Florian and W\"{u}hler,  Felix and Reichwald,  Julian},
+  year = {2025},
+  month = jan,
+  pages = {8–15}
+}
