--- a/CITATIONS.bib
+++ b/CITATIONS.bib
@@ -19,7 +19,7 @@
   number = {1},
   journal = {IEEE Internet Computing},
   publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
-  author = {Häußermann,  Tim M. and Lehmann,  Joel and Rache,  Alessa and Kolb,  Florian and W\"{u}hler,  Felix and Reichwald,  Julian},
+  author = {Häußermann,  Tim M. and Lehmann,  Joel and Rache,  Alessa and Kolb,  Florian and Wühler,  Felix and Reichwald,  Julian},
   year = {2025},
   month = jan,
   pages = {8–15}
